translation updates OSX installer
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28306 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Installer/Czech.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Czech.lproj/Localizable.strings
@@ -1,8 +1,8 @@
-"Install" = "Instalovat";
+﻿"Install" = "Instalovat";
 "Update" = "Aktualizovat";
 "Install Results" = "Instalovat Výsledky";
 "OK" = "OK";
-"Squeezebox Server installed successfully.\n" = "Squeezebox Server byl úspìšnì nainstalován.";
+"Squeezebox Server installed successfully.\n" = "Squeezebox Server byl úspěšně nainstalován.";
 "Squeezebox Server install failed.\n" = "Instalace Squeezebox Server selhala.";
-"You must have OS X 10.3 or later to run Squeezebox Server.\n" = "Ke spuštìní Squeezebox Server potøebujete OS X 10.3 nebo novìjší verzi.";
+"You must have OS X 10.3 or later to run Squeezebox Server.\n" = "Ke spuštění Squeezebox Server potřebujete OS X 10.3 nebo novější verzi.";
 "Mac OS X 10.3 Required" = "Vyžadován Mac OS X 10.3";
