--- a/osx/Preference Pane/Installer/Danish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Danish.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Install" = "Installer";
+﻿"Install" = "Installer";
 "Update" = "Opdater";
 "Install Results" = "Resultat af installation";
 "OK" = "OK";
