--- a/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Dutch.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Install" = "Installeer";
+﻿"Install" = "Installeer";
 "Update" = "Update";
 "Install Results" = "Installatieresultaten";
 "OK" = "OK";
