--- a/osx/Preference Pane/Installer/French.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/French.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Install" = "Installer";
+﻿"Install" = "Installer";
 "Update" = "Mettre à jour";
 "Install Results" = "Résultats de l'installation";
 "OK" = "OK";
