--- a/osx/Preference Pane/Installer/German.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/German.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Install" = "Installieren";
+﻿"Install" = "Installieren";
 "Update" = "Aktualisieren";
 "Install Results" = "Ergebnis der Installation";
 "OK" = "OK";
