--- a/osx/Preference Pane/Installer/Italian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Italian.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Install" = "Installa";
+﻿"Install" = "Installa";
 "Update" = "Aggiorna";
 "Install Results" = "Risultati installazione";
 "OK" = "OK";
