--- a/osx/Preference Pane/Installer/Norwegian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Norwegian.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Install" = "Installer";
+﻿"Install" = "Installer";
 "Update" = "Oppdater";
 "Install Results" = "Installeringsresultat";
 "OK" = "OK";
