--- a/osx/Preference Pane/Installer/Polish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Polish.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Install" = "Zainstaluj";
+﻿"Install" = "Zainstaluj";
 "Update" = "Aktualizuj";
 "Install Results" = "Wyniki instalacji";
 "OK" = "OK";
