--- a/osx/Preference Pane/Installer/Russian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Russian.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Install" = "Установить";
+﻿"Install" = "Установить";
 "Update" = "Обновить";
 "Install Results" = "Результаты установки";
 "OK" = "ОК";
