--- a/osx/Preference Pane/Installer/Spanish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Spanish.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Install" = "Instalar";
+﻿"Install" = "Instalar";
 "Update" = "Actualizar";
 "Install Results" = "Resultados de instalación";
 "OK" = "Correcto";
