--- a/osx/Preference Pane/Installer/Swedish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Swedish.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Install" = "Installera";
+﻿"Install" = "Installera";
 "Update" = "Uppdatering";
 "Install Results" = "Installationsresultat";
 "OK" = "OK";
