--- a/osx/Preference Pane/Installer/Finnish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Finnish.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-/* Localized versions of Info.plist keys */
+﻿/* Localized versions of Info.plist keys */
 
 CFBundleName = "Squeezebox Serverin asennusohjelma";
 CFBundleShortVersionString = "7.4";
