--- a/osx/Preference Pane/Installer/Italian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Italian.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-/* Localized versions of Info.plist keys */
+﻿/* Localized versions of Info.plist keys */
 
 CFBundleName = "Programma di installazione di Squeezebox Server";
 CFBundleShortVersionString = "7.4";
