translation updates OSX PrefPane
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28308 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Czech.lproj/Localizable.strings
+++ b/osx/Preference Pane/Czech.lproj/Localizable.strings
@@ -1,22 +1,22 @@
-"Start Server" = "Spustit Server";
+﻿"Start Server" = "Spustit Server";
 "Stop Server" = "Zastavit Server";
-"Start Server Description" = "Ke spuštìní Squeezebox Server kliknìte na toto tlaèítko. Po spuštìní získají pøehrávaèe pøístup do vaší hudební knihovny.";
-"Stop Server Description" = "K zastavení Squeezebox Server kliknìte na toto tlaèítko. Po zastavení ztratí pøehrávaèe pøístup do vaší hudební knihovny.";
-"Authorization Launch Error" = "Není možné aktualizovat firmware: chybìjící soubor Update Firmware.sh.";
+"Start Server Description" = "Ke spuštění Squeezebox Server klikněte na toto tlačítko. Po spuštění získají přehrávače přístup do vaší hudební knihovny.";
+"Stop Server Description" = "K zastavení Squeezebox Server klikněte na toto tlačítko. Po zastavení ztratí přehrávače přístup do vaší hudební knihovny.";
+"Authorization Launch Error" = "Není možné aktualizovat firmware: chybějící soubor Update Firmware.sh.";
 "Expired Authorization Error" = "Není možné aktualizovat firmware: autorizace vypršela.";
 "Firmware version" = "Firmware verze %@.";
 "Firmware version invalid" = "Neplatná verze firmware.";
-"An updated Squeezebox Server version is available and ready to be installed." = "Aktualizovaná verze Squeezebox Server je k dispozici a pøipravena k instalaci.";
+"An updated Squeezebox Server version is available and ready to be installed." = "Aktualizovaná verze Squeezebox Server je k dispozici a připravena k instalaci.";
 "There's no updated Squeezebox Server version available." = "K dispozici není žádná aktualizovaná verze Squeezebox Server.";
 "Check for update" = "Hledat aktualizace";
 "Download update" = "Stáhnout aktualizaci";
 "Install update" = "Instalovat aktualizaci";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Pøed zahájením èištìní musí být Squeezebox Server zastaven. Chcete ho zastavit nyní?";
-"Run Cleanup" = "Spustit èištìní";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Před zahájením čištění musí být Squeezebox Server zastaven. Chcete ho zastavit nyní?";
+"Run Cleanup" = "Spustit čištění";
 "Cancel" = "Storno";
 "Not now" = "Nyní ne";
 "Abort" = "Zrušit";
 "Rescan" = "Nové prohledání";
 "Invalid mysqueezebox.com username or password." = "Neplatné uživatelské jméno nebo heslo mysqueezebox.com.";
 "The server is stopped" = "Server je zastaven";
-"The server is running" = "Server je spuštìn";
+"The server is running" = "Server je spuštěn";
