--- a/osx/Preference Pane/Finnish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Finnish.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Start Server" = "Käynnistä palvelin";
+﻿"Start Server" = "Käynnistä palvelin";
 "Stop Server" = "Pysäytä palvelin";
 "Start Server Description" = "Käynnistä Squeeze Server tällä painikkeella. Kun se on käynnissä,
 soittimet voivat käyttää musiikkikirjastoa.";
@@ -19,5 +19,5 @@ soittimet voivat käyttää musiikkikirjastoa.";
 "Abort" = "Keskeytä";
 "Rescan" = "Tarkista uudelleen";
 "Invalid mysqueezebox.com username or password." = "Virheellinen mysqueezebox.comin käyttäjätunnus tai salasana.";
-"The server is stopped" = "Palvelin on pysäytetty";
-"The server is running" = "Palvelin on käynnissä";
+"The server is stopped" = "Tila: palvelin on pysäytetty";
+"The server is running" = "Tila: palvelin on käynnissä";
