--- a/osx/Preference Pane/Swedish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Swedish.lproj/Localizable.strings
@@ -1,20 +1,20 @@
-"Start Server" = "Starta server";
-"Stop Server" = "Avaktivera server";
-"Start Server Description" = "Klicka på den här knappen för att aktivera Squeezebox Server. När du har gjort det får spelarna tillgång till ditt musikbibliotek.";
-"Stop Server Description" = "Klicka på den här knappen för att avaktivera Squeezebox Server. När du har gjort det har spelarna inte längre tillgång till ditt musikbibliotek.";
-"Authorization Launch Error" = "Det går inte att uppdatera den inbyggda programvaran eftersom filen Update Firmware.sh saknas.";
-"Expired Authorization Error" = "Det går inte att uppdatera den inbyggda programvaran eftersom auktoriseringen inte gäller längre.";
-"Firmware version" = "Inbyggd programvara version %@.";
+﻿"Start Server" = "Starta servern";
+"Stop Server" = "Stoppa servern";
+"Start Server Description" = "Klicka på den här knappen för att starta Squeezebox Server. När den har startats kan spelare komma åt din musiksamling.";
+"Stop Server Description" = "Klicka på den här knappen för att stoppa Squeezebox Server. När den har stoppats kan spelare inte längre komma åt din musiksamling";
+"Authorization Launch Error" = "Det går inte att uppdatera den inbyggda programvaran: filen Update Firmware.sh saknas.";
+"Expired Authorization Error" = "Det går inte att uppdatera den inbyggda programvaran: Auktoriseringstiden har löpt ut.";
+"Firmware version" = "Version för inbyggd programvara %@.";
 "Firmware version invalid" = "Ogiltig version av inbyggd programvara.";
-"An updated Squeezebox Server version is available and ready to be installed." = "En uppdaterad version av Squeezebox Server är tillgänglig och klar att installeras.";
-"There's no updated Squeezebox Server version available." = "Det finns ingen uppdaterad version av Squeezebox Server tillgänglig.";
+"An updated Squeezebox Server version is available and ready to be installed." = "Det finns en uppdaterad Squeezebox Server-version som är klar att installeras.";
+"There's no updated Squeezebox Server version available." = "Det finns ingen uppdaterad Squeezebox Server-version.";
 "Check for update" = "Sök efter uppdatering";
-"Download update" = "Ladda ner uppdatering";
+"Download update" = "Ladda ned uppdatering";
 "Install update" = "Installera uppdatering";
-"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server måste stoppas innan du kan köra rensningen. Vill du stoppa den nu?";
+"Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server måste stoppas innan du kör rensningen. Vill du stoppa den nu?";
 "Run Cleanup" = "Kör rensning";
 "Cancel" = "Avbryt";
-"Not now" = "Inte nu";
+"Not now" = "Inte just nu";
 "Abort" = "Avbryt";
 "Rescan" = "Sök igen";
 "Invalid mysqueezebox.com username or password." = "Ogiltigt användarnamn eller lösenord för mysqueezebox.com";
