--- a/osx/Preference Pane/Finnish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Finnish.lproj/InfoPlist.strings
@@ -2,6 +2,6 @@
 
 CFBundleName = "Squeezebox Server";
 CFBundleShortVersionString = "7.4";
-CFBundleGetInfoString = "Squeezebix Serverin versio 7.4, Copyright 2002-2009 Logitech";
+CFBundleGetInfoString = "Squeezebox Serverin versio 7.4, Copyright 2002-2009 Logitech";
 NSHumanReadableCopyright = "Copyright 2002-2009 Logitech";
 NSPrefPaneIconLabel = "Squeezebox\nServer";
