--- a/osx/Preference Pane/French.lproj/Localizable.strings
+++ b/osx/Preference Pane/French.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Start Server" = "Démarrer le serveur";
+﻿"Start Server" = "Démarrer le serveur";
 "Stop Server" = "Arrêter le serveur";
 "Start Server Description" = "Cliquez sur ce bouton pour démarrer le Squeezebox Server. Une fois le serveur démarré, les platines pourront accéder à votre collection musicale.";
 "Stop Server Description" = "Cliquez sur ce bouton pour arrêter le Squeezebox Server. Une fois le serveur arrêté, les platines ne pourront pas accéder à votre collection musicale.";
@@ -18,5 +18,5 @@
 "Abort" = "Arrêter";
 "Rescan" = "Analyser";
 "Invalid mysqueezebox.com username or password." = "Nom d'utilisateur ou mot de passe mysqueezebox.com non valide.";
-"The server is stopped" = "Le serveur est arrêté.";
-"The server is running" = "Le serveur est en cours d'exécution.";
+"The server is stopped" = "Etat: le serveur est arrêté.";
+"The server is running" = "Etat: le serveur est en cours d'exécution.";
