--- a/osx/Preference Pane/Norwegian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Norwegian.lproj/Localizable.strings
@@ -1,7 +1,7 @@
-"Start Server" = "Start server";
+﻿"Start Server" = "Start server";
 "Stop Server" = "Stopp server";
-"Start Server Description" = "Klikk på denne knappen for å starte Squeezebox Server. Spillerne får tilgang til musikkbiblioteket ditt når serveren startes.";
-"Stop Server Description" = "Klikk på denne knappen for å stoppe Squeezebox Server. Spillerne har ikke tilgang til musikkbiblioteket ditt når serveren er stoppet.";
+"Start Server Description" = "Klikk på denne knappen for å starte Squeezebox Server. Spillerne får tilgang til musikkbiblioteket ditt når Squeezebox Server startes.";
+"Stop Server Description" = "Klikk på denne knappen for å stoppe Squeezebox Server. Spillerne har ikke tilgang til musikkbiblioteket ditt når Squeezebox Server er stoppet.";
 "Authorization Launch Error" = "Kunne ikke oppdatere fastvaren: filen Update Firmware.sh mangler.";
 "Expired Authorization Error" = "Kunne ikke oppdatere fastvare: autorisasjonen har utløpt.";
 "Firmware version" = "Fastvareversjon %@.";
