--- a/osx/Preference Pane/Russian.lproj/Localizable.strings
+++ b/osx/Preference Pane/Russian.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"Start Server" = "Запустить сервер";
+﻿"Start Server" = "Запустить сервер";
 "Stop Server" = "Остановить сервер";
 "Start Server Description" = "Нажмите эту кнопку, чтобы запустить Squeezebox Server. После запуска медиатека будет доступна для плееров.";
 "Stop Server Description" = "Нажмите эту кнопку, чтобы остановить Squeezebox Server. После остановки медиатека будет недоступна для плееров.";
@@ -18,5 +18,5 @@
 "Abort" = "Прервать";
 "Rescan" = "Повтор сканирования";
 "Invalid mysqueezebox.com username or password." = "Недействительные имя пользователя или пароль mysqueezebox.com.";
-"The server is stopped" = "Cервер остановлен";
-"The server is running" = "Cервер выполняется";
+"The server is stopped" = "Состояние: сервер остановлен";
+"The server is running" = "Состояние: сервер выполняется";
