Fixed Bug: 13807 +1.5 Description: show "starting..." message while SC is running, but web UI not accessible yet
Bug: 13807
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28413 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Danish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Danish.lproj/Localizable.strings
@@ -20,3 +20,4 @@
 "Invalid mysqueezebox.com username or password." = "Ugyldigt brugernavn eller adgangskode til mysqueezebox.com.";
 "The server is stopped" = "Serveren er stoppet";
 "The server is running" = "Serveren kører";
+"The server is starting" = "Serveren starter";
