--- a/osx/Preference Pane/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/English.lproj/Localizable.strings
@@ -20,3 +20,4 @@
 "Invalid mysqueezebox.com username or password." = "Invalid mysqueezebox.com username or password.";
 "The server is stopped" = "The server is stopped.";
 "The server is running" = "The server is running.";
+"The server is starting" = "The server is starting.";
