--- a/osx/Preference Pane/Czech.lproj/Localizable.strings
+++ b/osx/Preference Pane/Czech.lproj/Localizable.strings
@@ -20,3 +20,4 @@
 "Invalid mysqueezebox.com username or password." = "Neplatné uživatelské jméno nebo heslo mysqueezebox.com.";
 "The server is stopped" = "Server je zastaven";
 "The server is running" = "Server je spuštěn";
+"The server is starting" = "Spouštění server";
