--- a/osx/Preference Pane/German.lproj/Localizable.strings
+++ b/osx/Preference Pane/German.lproj/Localizable.strings
@@ -3,7 +3,7 @@
 "Start Server Description" = "Klicken Sie auf diese Schaltfläche, um Squeezebox Server zu starten. Nach dem Start können Player auf Ihre Musiksammlung zugreifen.";
 "Stop Server Description" = "Klicken Sie auf diese Schaltfläche, um Squeezebox Server anzuhalten. Wenn der Server angehalten wurde, können die Player nicht mehr auf Ihre Musiksammlung zugreifen.";
 "Authorization Launch Error" = "Firmware konnte nicht aktualisiert werden: Datei 'Update Firmware.sh' fehlt.";
-"Expired Authorization Error" = "Firmware konnte nicht aktualisiert werden: Authorisierung abgelaufen.";
+"Expired Authorization Error" = "Firmware konnte nicht aktualisiert werden: Autorisierung abgelaufen.";
 "Firmware version" = "Firmware-Version %@.";
 "Firmware version invalid" = "Firmware-Version ungültig.";
 "An updated Squeezebox Server version is available and ready to be installed." = "Eine aktualisierte Version von Squeezebox Server ist verfügbar und kann installiert werden.";
