--- a/osx/Preference Pane/Swedish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Swedish.lproj/Localizable.strings
@@ -3,13 +3,13 @@
 "Start Server Description" = "Klicka på den här knappen för att starta Squeezebox Server. När den har startats kan spelare komma åt din musiksamling.";
 "Stop Server Description" = "Klicka på den här knappen för att stoppa Squeezebox Server. När den har stoppats kan spelare inte längre komma åt din musiksamling";
 "Authorization Launch Error" = "Det går inte att uppdatera den inbyggda programvaran: filen Update Firmware.sh saknas.";
-"Expired Authorization Error" = "Det går inte att uppdatera den inbyggda programvaran: Auktoriseringstiden har löpt ut.";
-"Firmware version" = "Version för inbyggd programvara %@.";
+"Expired Authorization Error" = "Det går inte att uppdatera den inbyggda programvaran: auktoriseringstiden har löpt ut.";
+"Firmware version" = "Version av inbyggd programvara %@.";
 "Firmware version invalid" = "Ogiltig version av inbyggd programvara.";
-"An updated Squeezebox Server version is available and ready to be installed." = "Det finns en uppdaterad Squeezebox Server-version som är klar att installeras.";
-"There's no updated Squeezebox Server version available." = "Det finns ingen uppdaterad Squeezebox Server-version.";
+"An updated Squeezebox Server version is available and ready to be installed." = "Det finns en uppdaterad Squeezebox Server-version som kan installeras.";
+"There's no updated Squeezebox Server version available." = "Det finns ingen uppdaterad version av Squeezebox Server tillgänglig.";
 "Check for update" = "Sök efter uppdatering";
-"Download update" = "Ladda ned uppdatering";
+"Download update" = "Ladda ner uppdatering";
 "Install update" = "Installera uppdatering";
 "Squeezebox Server has to be stopped before running the cleanup. Do you want to stop it now?" = "Squeezebox Server måste stoppas innan du kör rensningen. Vill du stoppa den nu?";
 "Run Cleanup" = "Kör rensning";
