fix installer script localization
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28563 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Installer/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/English.lproj/Localizable.strings
@@ -6,3 +6,5 @@
 "Squeezebox Server install failed.\n" = "Squeezebox Server install failed.";
 "You must have OS X 10.3 or later to run Squeezebox Server.\n" = "You must have OS X 10.3 or later to run Squeezebox Server.";
 "Mac OS X 10.3 Required" = "Mac OS X 10.3 Required";
+"Please quit System Preferences before running the installer.\n" = "Please quit System Preferences before running the installer.\n";
+"Please stop Squeezebox Server before running the installer.\n" = "Please stop Squeezebox Server before running the installer.\n";
