don't store version strings in binary .nib files, but load them from Localizable.strings
git-svn-id: file:///home/awy/mirror/slim/7.5/trunk/platforms@28971 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/English.lproj/Localizable.strings
+++ b/osx/Preference Pane/English.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "The server is stopped" = "The server is stopped.";
 "The server is running" = "The server is running.";
 "The server is starting" = "The server is starting.";
+"Version x.y.z" = "Version 7.5.0";
