--- a/osx/Preference Pane/Spanish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Spanish.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "The server is stopped" = "El servidor está detenido";
 "The server is running" = "El servidor está en ejecución";
 "The server is starting" = "Iniciando el servidor";
+"Version x.y.z" = "Versión 7.5.0";
