--- a/osx/Preference Pane/Czech.lproj/Localizable.strings
+++ b/osx/Preference Pane/Czech.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "The server is stopped" = "Server je zastaven";
 "The server is running" = "Server je spuštěn";
 "The server is starting" = "Spouštění server";
+"Version x.y.z" = "Verze 7.5.0";
