--- a/osx/Preference Pane/Polish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Polish.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "The server is stopped" = "Serwer jest zatrzymany";
 "The server is running" = "Serwer działa";
 "The server is starting" = "Uruchamianie serwer";
+"Version x.y.z" = "Wersja 7.5.0";
