don't store version numbers in binary .nib files, but read them from Localizable.strings (OSX installer)
git-svn-id: file:///home/awy/mirror/slim/7.5/trunk/platforms@28988 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Installer/Czech.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Czech.lproj/Localizable.strings
@@ -6,3 +6,6 @@
 "Squeezebox Server install failed.\n" = "Instalace Squeezebox Server selhala.";
 "You must have OS X 10.3 or later to run Squeezebox Server.\n" = "Ke spuštění Squeezebox Server potřebujete OS X 10.3 nebo novější verzi.";
 "Mac OS X 10.3 Required" = "Vyžadován Mac OS X 10.3";
+"Please quit System Preferences before running the installer.\n" = "Please quit System Preferences before running the installer.\n";
+"Please stop Squeezebox Server before running the installer.\n" = "Please stop Squeezebox Server before running the installer.\n";
+"Version x.y.z" = "Verze 7.5.0";
