--- a/osx/Preference Pane/Installer/Finnish.lproj/Localizable.strings
+++ b/osx/Preference Pane/Installer/Finnish.lproj/Localizable.strings
@@ -6,3 +6,6 @@
 "Squeezebox Server install failed.\n" = "Squeezebox Serverin asennus epäonnistui.";
 "You must have OS X 10.3 or later to run Squeezebox Server.\n" = "Squeezebox Serverin käyttämiseen tarvitaan OS X -käyttöjärjestelmän versio 10.3 tai uudempi.";
 "Mac OS X 10.3 Required" = "Vaaditaan Mac OS X 10.3";
+"Please quit System Preferences before running the installer.\n" = "Please quit System Preferences before running the installer.\n";
+"Please stop Squeezebox Server before running the installer.\n" = "Please stop Squeezebox Server before running the installer.\n";
+"Version x.y.z" = "Versio 7.5.0";
