--- a/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings
@@ -3,9 +3,4 @@
 CFBundleName = "Programme d'installation du Squeezebox Server";
 CFBundleShortVersionString = "7.5.0";
 CFBundleGetInfoString = "Programme d'installation du Squeezebox Server version 7.5.0, Copyright 2003-2010 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2010 Logitech";==== ORIGINAL VERSION platforms/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings 126651685856702
-CFBundleShortVersionString = "7.4.2";
-CFBundleGetInfoString = "Programme d'installation du Squeezebox Server version 7.4.2, Copyright 2003-2009 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2009 Logitech";==== THEIR VERSION platforms/osx/Preference Pane/Installer/French.lproj/InfoPlist.strings (/sd/slim/7.4/trunk) 126651685856702
-CFBundleShortVersionString = "7.4.2";
-CFBundleGetInfoString = "Programme d'installation du Squeezebox Server version 7.4.2, Copyright 2003-2010 Logitech";
+NSHumanReadableCopyright = "Copyright 2003-2010 Logitech";
