--- a/osx/Preference Pane/Installer/Italian.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Italian.lproj/InfoPlist.strings
@@ -3,9 +3,4 @@
 CFBundleName = "Programma di installazione di Squeezebox Server";
 CFBundleShortVersionString = "7.5.0";
 CFBundleGetInfoString = "Programma di installazione di Squeezebox Server versione 7.5.0. Copyright 2003-2010 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2010 Logitech";==== ORIGINAL VERSION platforms/osx/Preference Pane/Installer/Italian.lproj/InfoPlist.strings 1266516864313
-CFBundleShortVersionString = "7.4.2";
-CFBundleGetInfoString = "Programma di installazione di Squeezebox Server versione 7.4.2. Copyright 2003-2008 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2009 Logitech";==== THEIR VERSION platforms/osx/Preference Pane/Installer/Italian.lproj/InfoPlist.strings (/sd/slim/7.4/trunk) 1266516864313
-CFBundleShortVersionString = "7.4.2";
-CFBundleGetInfoString = "Programma di installazione di Squeezebox Server versione 7.4.2. Copyright 2003-2008 Logitech";
+NSHumanReadableCopyright = "Copyright 2003-2010 Logitech";
