--- a/osx/Preference Pane/Installer/Spanish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Spanish.lproj/InfoPlist.strings
@@ -3,9 +3,4 @@
 CFBundleName = "Instalador de Squeezebox Server";
 CFBundleShortVersionString = "7.5.0";
 CFBundleGetInfoString = "Instalador de Squeezebox Server versión 7.5.0, Copyright 2003-2010 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2010 Logitech";==== ORIGINAL VERSION platforms/osx/Preference Pane/Installer/Spanish.lproj/InfoPlist.strings 126651685950058
-CFBundleShortVersionString = "7.4.2";
-CFBundleGetInfoString = "Instalador de Squeezebox Server versión 7.4.2, Copyright 2003-2009 Logitech";
-NSHumanReadableCopyright = "Copyright 2003-2009 Logitech";==== THEIR VERSION platforms/osx/Preference Pane/Installer/Spanish.lproj/InfoPlist.strings (/sd/slim/7.4/trunk) 126651685950058
-CFBundleShortVersionString = "7.4.2";
-CFBundleGetInfoString = "Instalador de Squeezebox Server versión 7.4.2, Copyright 2003-2010 Logitech";
+NSHumanReadableCopyright = "Copyright 2003-2010 Logitech";
