Revert bad version merges
git-svn-id: file:///home/awy/mirror/slim/7.5/trunk/platforms@30231 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/osx/Preference Pane/Installer/Swedish.lproj/InfoPlist.strings
+++ b/osx/Preference Pane/Installer/Swedish.lproj/InfoPlist.strings
@@ -3,9 +3,4 @@
 CFBundleName = "Installationsprogram för Squeezebox Server";
 CFBundleShortVersionString = "7.5.0";
 CFBundleGetInfoString = "Installationsprogram för Squeezebox Server version 7.5.0, © 2003–2009 Logitech";
-NSHumanReadableCopyright = "© 2003–2009 Logitech";==== ORIGINAL VERSION platforms/osx/Preference Pane/Installer/Swedish.lproj/InfoPlist.strings 126688419315688
-CFBundleShortVersionString = "7.4.2";
-CFBundleGetInfoString = "Installationsprogram för Squeezebox Server version 7.4.2, © 2003–2010 Logitech";
-NSHumanReadableCopyright = "© 2003–2010 Logitech";==== THEIR VERSION platforms/osx/Preference Pane/Installer/Swedish.lproj/InfoPlist.strings (/sd/slim/7.4/trunk) 126688419315688
-CFBundleShortVersionString = "7.4.3";
-CFBundleGetInfoString = "Installationsprogram för Squeezebox Server version 7.4.3, © 2003–2010 Logitech";
+NSHumanReadableCopyright = "© 2003–2009 Logitech";
