Optimized build of faad with some assembly for AAC decoding Decoding speed:   * ALAC:    6.34x realtime   * AAC:     4.55x realtime   * AACplus: 2.27x realtime
git-svn-id: file:///home/awy/mirror/slim/7.5/trunk/platforms@30762 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/Bin/sparc-unknown-linux-gnu/README
+++ b/readynas/Bin/sparc-unknown-linux-gnu/README
@@ -10,3 +10,6 @@ Source: http://www.readynas.com/download/GPL/RNR4_RND4_RND2_4.1.6_WW_src.zip
 * alac is in the alac_decoder directory
 
 Read the README.INFRANT files in each directory for build instructions.
+
+faad was compiled with:
+-DFIXED_POINT -DPADRE -O3
